update - solved link alignment issue

--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,7 @@ footer {
 }
 
 .nav-brand {
+  padding-top: 00.5rem;
   display: flex;
   float: left;
 }
